<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="198dp"
        android:background="@drawable/bg_view_rounded"
        android:orientation="vertical">
        <TextView
            android:id="@+id/add_new_task_title_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="28dp"
            android:text="@string/add_a_new_task"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="26sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_view_rounded"
            android:baselineAligned="false"
            android:outlineProvider="none" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item_tasks_rounded"
        android:paddingTop="22dp"
        android:paddingBottom="22dp"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="-60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/new_task_title"
                android:text="@string/task_title"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/add_task_title"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingLeft="12dp"
                android:textColorHint="#B5B5B5"
                android:textColor="@color/colorPrimaryDark"
                android:hint="@string/what_would_you_do"
                android:background="@drawable/bg_input_task"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/new_task_desc"
                android:text="@string/task_description"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/add_task_desc"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingLeft="12dp"
                android:textColorHint="#B5B5B5"
                android:textColor="@color/colorPrimaryDark"
                android:hint="@string/enter_task_details"
                android:background="@drawable/bg_input_task"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/new_task_time"
                android:text="@string/due_date"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/add_task_time"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingLeft="12dp"
                android:textColorHint="#B5B5B5"
                android:textColor="@color/colorPrimaryDark"
                android:maxLength="15"
                android:hint="@string/when_do_you_do_it"
                android:background="@drawable/bg_input_task"
                android:inputType="text"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_save_task"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/bg_btn_create_task"
        android:text="@string/create_task"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/bg_btn_cancel"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="#AFAFAF"
        android:textSize="22sp" />
</LinearLayout>