<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/bg_view_rounded"
        android:orientation="vertical">
        <TextView
            android:id="@+id/sign_up_title_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:layout_marginBottom="2dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="38sp" />

        <TextView
            android:id="@+id/sign_up_subtitle_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/to_start_using_this_application"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_view_rounded"
            android:baselineAligned="false"
            android:outlineProvider="none" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item_tasks_rounded"
        android:paddingTop="22dp"
        android:paddingBottom="22dp"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="-60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/registerNameTitle"
                android:text="@string/full_name"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/register_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingLeft="12dp"
                android:textColorHint="#B5B5B5"
                android:textColor="@color/colorPrimaryDark"
                android:hint="@string/example_john_cena"
                android:background="@drawable/bg_input_task"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/registerusernameTitle"
                android:text="@string/username"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingLeft="12dp"
                android:textColorHint="#B5B5B5"
                android:textColor="@color/colorPrimaryDark"
                android:hint="@string/example_johncenaganteng"
                android:background="@drawable/bg_input_task"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/registerpasswordTitle"
                android:text="@string/password"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingLeft="12dp"
                android:textColorHint="#B5B5B5"
                android:textColor="@color/colorPrimaryDark"
                android:password="true"
                android:hint="@string/use_a_strong_and_memorable_password"
                android:background="@drawable/bg_input_task"
                android:inputType="text"
                tools:ignore="Deprecated" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/bg_btn_create_task"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/bg_btn_cancel"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="#AFAFAF"
        android:textSize="22sp" />

</LinearLayout>
